= 3.24.0 (2019-09-13)

* Fix Proc.new warning in module_include plugin on Ruby 2.7+ (jeremyevans)

* Improve render_each performance by calling compiled template methods directly (jeremyevans)

= 3.23.0 (2019-08-13)

* Make roda/session_middleware work if type_routing plugin is loaded into Roda itself (jeremyevans) (#169)

* Handle requests with nothing before extension in the path in the type_routing plugin (jeremyevans) (#168)

* Always show line number in exception_page output in exception_page plugin (jeremyevans)

* Improve render/view performance up to 2x in development mode in the default case by calling compiled template methods directly (jeremyevans)

= 3.22.0 (2019-07-12)

* Improve render performance up to 4x in the default case by calling compiled template methods directly (jeremyevans)

= 3.21.0 (2019-06-14)

* Cache compiled templates in development mode, until the template files are modified (jeremyevans)

= 3.20.0 (2019-05-16)

* Set Content-Length header to 0 for empty 205 responses (jeremyevans)

= 3.19.0 (2019-04-12)

* Allow assets plugin :timestamp_paths option to be a string to specify a custom separator (jeremyevans)

* Fix handling for blocks with arity > 1 where expected arity is 1 (jeremyevans)

* Improve performance for handling blocks with arity 0 where expected arity is 1 by avoiding instance_exec (jeremyevans)

* Improve terminal maching by around 4x (jeremyevans)

* Improve symbol matching by 10-20% (jeremyevans)

* Improve string matching by 10-20% (jeremyevans)

* Automatically load the direct_call plugin when freezing if no middleware is used for better performance (jeremyevans)

* Delay building rack app until Roda.app is called (jeremyevans)

* Add hash_routes plugin for O(1) route dispatching at any level in the routing tree (jeremyevans)

* Add support for per-cookie cipher secrets in the sessions plugin, and enable them by default (jeremyevans)
