@@ -34,8 +34,6 @@ class Roda
         app.plugin :render
       end
 
-      COMPILED_METHOD_SUPPORT = Render::COMPILED_METHOD_SUPPORT
-      NO_CACHE = {:cache=>false}.freeze
       ALLOWED_KEYS = [:locals, :local].freeze
 
       module InstanceMethods
@@ -47,40 +45,13 @@ class Roda
         #           set a local variable.  If not set, uses the template name.
         def render_each(enum, template, opts=(no_opts = true; optimized_template = _cached_render_each_template_method(template); OPTS))
           if optimized_template
-            as = template.to_s.to_sym
-            return enum.map{|v| send(optimized_template, as=>v)}.join
+            return _optimized_render_each(enum, optimized_template, template.to_s.to_sym, {})
           elsif opts.has_key?(:local)
             as = opts[:local]
           else
             as = template.to_s.to_sym
-
-            if COMPILED_METHOD_SUPPORT &&
-               no_opts &&
-               optimized_template.nil? &&
-               (method_cache = render_opts[:template_method_cache]) &&
-               (method_cache_key = _cached_template_method_key([:_render_each, template]))
-
-              template_obj = retrieve_template(render_template_opts(template, NO_CACHE))
-              method_name = :"_roda_render_each_#{self.class.object_id}_#{method_cache_key}"
-
-              case template_obj
-              when Render::TemplateMtimeWrapper
-                optimized_template = method_cache[method_cache_key] = template_obj.define_compiled_method(self.class, method_name, [as])
-              else
-                begin
-                  unbound_method = template_obj.send(:compiled_method, [as])
-                rescue ::NotImplementedError
-                  method_cache[method_cache_key] = false
-                else
-                  self.class::RodaCompiledTemplates.send(:define_method, method_name, unbound_method)
-                  self.class::RodaCompiledTemplates.send(:private, method_name)
-                  optimized_template = method_cache[method_cache_key] = method_name
-                end
-              end
-
-              if optimized_template
-                return enum.map{|v| send(optimized_template, as=>v)}.join
-              end
+            if no_opts && optimized_template.nil? && (optimized_template = _optimized_render_method_for_locals(template, (locals = {as=>nil})))
+              return _optimized_render_each(enum, optimized_template, as, locals)
             end
           end
 
@@ -91,59 +62,10 @@ class Roda
             else
               locals = opts[:locals] = {}
             end
-          end
+            locals[as] = nil
 
-          if COMPILED_METHOD_SUPPORT &&
-             !no_opts &&
-             as &&
-             (opts.keys - ALLOWED_KEYS).empty? &&
-             (method_cache = render_opts[:template_method_cache])
-
-            locals_keys = (locals.keys << as).sort
-            key = [:_render_each, template, locals_keys]
-
-            optimized_template = case template
-            when String, Symbol
-              _cached_template_method_lookup(method_cache, key)
-            else
-              false
-            end
-
-            case optimized_template
-            when Symbol
-              return enum.map do |v|
-                locals[as] = v
-                send(optimized_template, locals)
-              end.join
-            when false
-              # nothing
-            else
-              if method_cache_key = _cached_template_method_key(key)
-                template_obj = retrieve_template(render_template_opts(template, NO_CACHE))
-                method_name = :"_roda_render_each_#{self.class.object_id}_#{method_cache_key}"
-
-                case template_obj
-                when Render::TemplateMtimeWrapper
-                  optimized_template = method_cache[method_cache_key] = template_obj.define_compiled_method(self.class, method_name, locals_keys)
-                else
-                  begin
-                    unbound_method = template_obj.send(:compiled_method, locals_keys)
-                  rescue ::NotImplementedError
-                    method_cache[method_cache_key] = false
-                  else
-                    self.class::RodaCompiledTemplates.send(:define_method, method_name, unbound_method)
-                    self.class::RodaCompiledTemplates.send(:private, method_name)
-                    optimized_template = method_cache[method_cache_key] = method_name
-                  end
-                end
-
-                if optimized_template
-                  return enum.map do |v|
-                    locals[as] = v
-                    send(optimized_template, locals)
-                  end.join
-                end
-              end
+            if (opts.keys - ALLOWED_KEYS).empty? && (optimized_template = _optimized_render_method_for_locals(template, locals))
+              return _optimized_render_each(enum, optimized_template, as, locals)
             end
           end
 
@@ -155,7 +77,7 @@ class Roda
         
         private
 
-        if COMPILED_METHOD_SUPPORT
+        if Render::COMPILED_METHOD_SUPPORT
           # If compiled method support is enabled in the render plugin, return the
           # method name to call to render the template.  Return false if not given
           # a string or symbol, or if compiled method support for this template has
@@ -164,11 +86,19 @@ class Roda
             case template
             when String, Symbol
               if (method_cache = render_opts[:template_method_cache])
-                _cached_template_method_lookup(method_cache, [:_render_each, template])
+                _cached_template_method_lookup(method_cache, [:_render_locals, template, [template.to_sym]])
               end
             else
               false
             end
+          end
+
+          # Use an optimized render for each value in the enum.
+          def _optimized_render_each(enum, optimized_template, as, locals)
+            enum.map do |v|
+              locals[as] = v
+              send(optimized_template, locals)
+            end.join
           end
         else
           # :nocov:
